...
            spacing: 16,
            children: [
              Expanded(
                flex: 1,
                child: OutlinedButton(
                  onPressed: () async => await onCompleted?.call(),
                  key: const Key("rejectBackgroundTrackingBtn"),
                  child: Text(MyLocalizations.of(context, "no_show_info")),
                ),
              ),
              Expanded(
                flex: 2,
                child: FilledButton(
...
